# Isaaclab-arm-learning

./: .cursorignore  .gitignore  ARM_T_训练指南.md  LICENSE  readme.md  train_arm_t.sh  train_arm_t_wandb.sh
.cursor/rules/: example.mdc
Train_notes/2025-10-13_00-31-18/: events.out.tfevents.1760286682.YY.143039.0  model_1500.pt
Train_notes/2025-10-13_00-31-18/git/: isaac_so_arm101.diff
Train_notes/2025-10-13_00-31-18/params/: env.pkl  env.yaml
logs/rsl_rl/arm_t_lift/2025-10-14_15-07-01/: events.out.tfevents.1760425621.YY.19155.0
logs/rsl_rl/arm_t_lift/2025-10-14_15-37-27/: events.out.tfevents.1760427447.YY.25468.0  (+1 more)
scripts/: list_arm_t_envs.py
scripts/rsl_rl/: play.py  train.py  train_wandb_lift.py  train_wandb_reach.py  train_wandb_reach_ik.py
source/ARM/: setup.py
source/ARM/arm_t/: __init__.py
source/ARM/config/: extension.toml
source/ARM/data/Robots/arm_t/urdf/: CMakeLists.txt  package.xml  urdf.rviz
source/ARM/data/Robots/arm_t/urdf/config/: tf_viewer.rviz
source/ARM/data/Robots/arm_t/urdf/launch/: display.launch.py  gazebo.launch.py  mock.launch.py
source/ARM/data/Robots/arm_t/urdf/urdf/: ARM_T.urdf  panther_gazebo.urdf.xacro  panther_gazebo_control.xacro  panther_mock_control.xacro  panther_with_gazebo.urdf.xacro  panther_with_mock.urdf.xacro
tool/generate_trained_pose/: analyze_pose_database.py  generate_reachable_poses.py  pose_with_moveit2-ros2.py
wandb/: latest-run
wandb/run-20251015_195832-a6j9jiz1/files/: conda-environment.yaml  config.yaml  requirements.txt
wandb/sweep-37djvhky/: config-5ljx63zh.yaml  config-ll0d8a2u.yaml
(+147 files in other folders)
